--- a/index.html
+++ b/index.html
@@ -560,7 +560,15 @@ The SHSI is a directional tool, not a survey or audit. It is designed to open a 
 
 </div>
 
-<footer>StaffHealth + Accushield Verified — StaffHealth Stability Index™ (SHSI) Calculator — Prototype</footer>
+<footer style="text-align:center; font-size:12px; color:#666; margin-top:25px;">
+  StaffHealth + Accushield Verified — StaffHealth Stability Index™ (SHSI) Calculator — Prototype
+</footer>
+
+<div style="text-align:center; font-size:11px; color:#777; margin-top:6px; opacity:0.75;">
+  Prototype Model v0.4 — Concept and framework developed independently by Hudson Keel
+  for internal evaluation and strategic insight testing.
+  Not a final or officially endorsed StaffHealth product.
+</div>
 
 <script>
 const WEIGHTS = { q1:12, q2:10, q3:14, q4:12, q5:10, q6:12, q7:8, q8:10, q9:6, q10:10 };
@@ -940,3 +948,4 @@ updateRowSums();
 </script>
 </body>
 </html>
+
