--- a/index.html
+++ b/index.html
@@ -507,9 +507,13 @@ For each question, enter how many communities in your portfolio match each optio
 <h3>Your StaffHealth Stability Index™ Snapshot</h3>
 <div class="results-row">
 <div class="result-pill">
-<div class="result-label" id="riskLabel">Baseline SHSI Stability (Pre-StaffHealth)</div>
-<div class="result-value" id="riskScoreLabel">0 / 100</div>
-<div id="riskBadge" class="badge"></div>
+  <div class="result-label" id="riskLabel">Baseline SHSI Stability (Pre-StaffHealth)</div>
+  <div class="result-value" id="riskScoreLabel">0 / 100</div>
+  <div id="riskBadge" class="badge"></div>
+
+  <div class="small" style="color:#bfbfbf; margin-top:4px;">
+    Directional stability score — not a survey or audit.
+  </div>
 </div>
 <div class="result-pill">
 <div class="result-label">Projected Stability Gain (Elasticity Impact)</div>
@@ -943,4 +947,5 @@ updateRowSums();
 </script>
 </body>
 </html>
+
 
