--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ For each question, enter how many communities in your portfolio match each optio
   <div id="riskBadge" class="badge"></div>
 
   <div class="small" style="color:#bfbfbf; margin-top:4px;">
-    Directional stability score — not a survey or audit.
+    Higher is better — Directional stability score — not a survey or audit.
   </div>
 </div>
 <div class="result-pill">
@@ -947,5 +947,6 @@ updateRowSums();
 </script>
 </body>
 </html>
+
 
 
